@@ -15,3 +15,9 @@ PROMPT      FCB CR,LF
             FCB 0
 COLD        LDS  #STACK
             LDAA #$20
+
+; http://www.mekatronix.com/downloads/docs/as11_man.pdf
+sym1 EQU 1
+sym2: EQU 2
+sym3:
+sym4: bne sym3
